Added in port and change the input type
Main changes:
1. For Tracker, should accept three parameters: ip address, N & K
2. For Game, need to run game at random port. If sharing the same port,
when one game closes, the port will stop entirely.
3. Cons: haven’t figured an elegant way to check if the port is already
in use.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@
 *.class
 *.iml
 out
+CS5223_StressTest12123/ab_12123
+
+CS5223_StressTest12123/ac_12123
+
+CS5223_StressTest12123/ad_12123
+
+CS5223_StressTest12123/ae_12123
+
+*.1
+
+log/Version_Number
+
+testGUI.java
+
+StressTest.java
+
+.project
