Add UI part and some changes..

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ testGUI.java
 StressTest.java
 
 .project
+
+classes/CS5223_StressTest12123/ab_12123
+
+classes/CS5223_StressTest12123/ac_12123
+
+classes/CS5223_StressTest12123/ad_12123
+
+classes/CS5223_StressTest12123/ae_12123
